<resources>
    <string name="app_name">sUPer</string>
    <string name="DefaultRM">3</string>
    <string name="NewFighterDialogTitle">Ajouter un combattant</string>
    <string name="NewFighterDialogOkButton">Ajouter</string>
    <string name="DialogCancelButton">Annuler</string>
    <string name="addButton">+</string>
    <string name="Phase">PHASE</string>
    <string name="Turn">TOUR</string>
    <string name="delButton">X</string>
    <string name="unhurt">indemne</string>
    <string name="attackButton">attaquer!</string>
    <string name="defaultInit">0-0-0-0</string>
    <string name="defaultND">69</string>
    <string name="statButton">STAT</string>
    <string name="invButton">INV</string>
    <string name="defaultName">Mowgli</string>
    <string name="vdEquals">VD=</string>
    <string name="g">g</string>
    <string name="DramaWound">G</string>
    <string name="vdDefaultLance">0</string>
    <string name="vdDefaultGarde">0</string>
    <string name="INVDialogTitle">Inventaire</string>
    <string name="DialogModify">Modifier</string>
    <string name="targetNDequals">ND Cible:</string>
    <string name="defaultTargetND">33</string>
    <string name="STATDialogTitle">Statut</string>
    <string name="attackFailed">Raté!</string>
    <string name="DamageEquals">Dégâts infligés:</string>
    <string name="defaultDamageValue">0</string>
    <string name="HurtDialogTitle">Blesser un combattant</string>
    <string name="stunned">Sonné</string>
    <string name="outFromWounds">Le combattant est au sol</string>
    <string name="creation">Creation:</string>
    <string name="fighter">combattant RM</string>
    <string name="fighters">combattants RM</string>

</resources>
