<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/vdEqualsText"
        android:text="@string/vdEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/vdLanceValue"
        android:text="@string/vdDefaultLance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"/>

    <TextView
        android:id="@+id/gText"
        android:text="@string/g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/vdGardeValue"
        android:text="@string/vdDefaultGarde"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"/>
</LinearLayout>